apps/base/httpbin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: httpbin
spec:
  selector:
    app: httpbin
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
